examples/real-games/juego-de-prueba/Juego-de-Prueba.error
error: unclosed delimiter
    ┌─ Juego-de-Prueba.typ:241:20
    │
241 │ #let title_page() = {
    │                     ^

error: unexpected closing bracket
    ┌─ Juego-de-Prueba.typ:275:4
    │
275 │     ]
    │     ^
    │
    = hint: try using a backslash escape: \]

error: unexpected closing bracket
    ┌─ Juego-de-Prueba.typ:282:2
    │
282 │   ]
    │   ^
    │
    = hint: try using a backslash escape: \]

